--- a/index.html
+++ b/index.html
@@ -1,1 +1,174 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Urjaswi Mukherjee | Economics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f5f5;
+    }
+
+    header {
+      background: #222;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .nav {
+      background: #333;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    .nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    .nav a:hover {
+      text-decoration: underline;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 20px auto;
+      background: white;
+      padding: 20px 25px 40px;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+
+    section h2 {
+      border-bottom: 2px solid #eee;
+      padding-bottom: 5px;
+    }
+
+    .cv-link {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 14px;
+      border-radius: 4px;
+      border: 1px solid #333;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    .cv-link:hover {
+      background: #333;
+      color: white;
+    }
+
+    footer {
+      text-align: center;
+      font-size: 0.85em;
+      color: #666;
+      padding: 15px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Top banner -->
+  <header id="home">
+    <h1>Urjaswi Mukherjee</h1>
+    <p>Ph.D. Candidate in Economics · University of Nevada, Reno</p>
+  </header>
+
+  <!-- “Tabs” navigation -->
+  <nav class="nav">
+    <a href="#home">Home</a> |
+    <a href="#about">About</a> |
+    <a href="#research">Research</a> |
+    <a href="#teaching">Teaching</a> |
+    <a href="#cv">CV</a>
+  </nav>
+
+  <div class="container">
+    <!-- HOME -->
+    <section>
+      <h2>Home</h2>
+      <p>
+        Welcome to my personal website. I am a Ph.D. candidate in Economics at the
+        University of Nevada, Reno. My research focuses on applied health economics,
+        particularly how public healthcare policies affect mental health and economic
+        well-being.
+      </p>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        [Write a short academic bio here — your background, current position, research fields,
+        and goals. You can mention your expected graduation date, affiliations, etc.]
+      </p>
+    </section>
+
+    <!-- RESEARCH -->
+    <section id="research">
+      <h2>Research</h2>
+      <p><strong>Research Interests:</strong> Health Economics, Applied Microeconomics, Labor, Public Policy</p>
+      <ul>
+        <li><strong>Postpartum Medicaid Eligibility Expansions and Postpartum Health Measures</strong><br />
+          Working paper. [Add link or journal status here]
+        </li>
+        <li><strong>Consequences of Post-Public Health Emergency Medicaid Redetermination</strong><br />
+          Work in progress.
+        </li>
+        <!-- Add more papers as needed -->
+      </ul>
+    </section>
+
+    <!-- TEACHING -->
+    <section id="teaching">
+      <h2>Teaching</h2>
+      <p>
+        I have taught and assisted in teaching a variety of undergraduate and graduate-level
+        courses, including:
+      </p>
+      <ul>
+        <li>Principles of Statistics I (Econ 261)</li>
+        <li>Principles of Statistics II (Econ 262)</li>
+        <li>Applied Econometrics / Advanced Econometrics</li>
+        <li>Principles of Microeconomics &amp; Macroeconomics</li>
+        <!-- Add more courses here -->
+      </ul>
+      <p>
+        My teaching emphasizes conceptual understanding, statistical intuition, and
+        helping students build confidence with quantitative tools.
+      </p>
+    </section>
+
+    <!-- CV -->
+    <section id="cv">
+      <h2>Curriculum Vitae (CV)</h2>
+      <p>
+        You can download my full CV here:
+      </p>
+      <!-- After you upload your CV as cv.pdf, this link will work -->
+      <a class="cv-link" href="cv.pdf" target="_blank">Download CV (PDF)</a>
+    </section>
+  </div>
+
+  <footer>
+    &copy; <span id="year"></span> Urjaswi Mukherjee · Contact: [your email here]
+  </footer>
+
+  <script>
+    // Set current year automatically
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
+</body>
+</html>
