--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ index.html
   <!-- Top banner -->
   <header id="home">
     <h1>Urjaswi Mukherjee</h1>
-    <p>Ph.D. Candidate in Economics · University of Nevada, Reno</p>
+    <p>Ph.D. Candidate in Economics · University of Nevada, Reno (UNR)</p>
   </header>
 
   <!-- “Tabs” navigation -->
@@ -100,10 +100,20 @@ index.html
     <section>
       <h2>Home</h2>
       <p>
-        Welcome to my personal website. I am a Ph.D. candidate in Economics at the
-        University of Nevada, Reno. My research focuses on applied health economics,
-        particularly how public healthcare policies affect mental health and economic
-        well-being.
+      **Self Introduction**
+
+I am a fifth-year Ph.D. candidate in the Department of Economics at the University of Nevada, Reno (UNR), **currently on the job market for the 2025–2026 academic year**.
+
+My research fields are **Health Economics**, **Applied Microeconomics** and **Behavioral Economics**. Broadly, my research explores how public policies interact with psychological and economic factors to influence mental health and financial well-being. My current work centers on evaluating the health and economic impacts of key federal policies, including the Consolidated Appropriations Act (CAA) and the Inflation Reduction Act (IRA).Three key questions drive my research:
+
+❓What are the effects of extended medicaid postpartum coverage on insurance and mental health outcomes?
+
+❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?
+
+❓What is the impact of negative life events on financial risk taking?
+
+I have taught and assisted in teaching a range of undergraduate and graduate courses as both an instructor and a teaching assistant. I am passionate about fostering an active, dynamic, and inclusive learning environment where students can connect theory with real-world challenges.
+
       </p>
     </section>
 
