--- a/index.html
+++ b/index.html
@@ -98,23 +98,24 @@ index.html
   <div class="container">
     <!-- HOME -->
     <section>
-      <h2>Home</h2>
+      <h2>Self Introduction</h2>
       <p>
-      **Self Introduction**
+            I am a fifth-year Ph.D. candidate in the Department of Economics at the University of Nevada, Reno (UNR), <strong>currently on the job market for the 2025–2026 academic year.</strong>
+        </p>
 
-I am a fifth-year Ph.D. candidate in the Department of Economics at the University of Nevada, Reno (UNR), **currently on the job market for the 2025–2026 academic year**.
+        <p>
+            My research fields are <strong>Health Economics, Applied Microeconomics</strong> and <strong>Behavioral Economics</strong>. Broadly, my research explores how public policies interact with psychological and economic factors to influence mental health and financial well-being. My current work centers on evaluating the health and economic impacts of key federal policies, including the Consolidated Appropriations Act (CAA) and the Inflation Reduction Act (IRA). Three key questions drive my research:
+        </p>
 
-My research fields are **Health Economics**, **Applied Microeconomics** and **Behavioral Economics**. Broadly, my research explores how public policies interact with psychological and economic factors to influence mental health and financial well-being. My current work centers on evaluating the health and economic impacts of key federal policies, including the Consolidated Appropriations Act (CAA) and the Inflation Reduction Act (IRA).Three key questions drive my research:
+        <ul>
+            <li class="question"><span class="emoji">❓</span>What are the effects of extended medicaid postpartum coverage on insurance and mental health outcomes?</li>
+            <li class="question"><span class="emoji">❓</span>What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
+            <li class="question"><span class="emoji">❓</span>What is the impact of negative life events on financial risk taking?</li>
+        </ul>
 
-❓What are the effects of extended medicaid postpartum coverage on insurance and mental health outcomes?
-
-❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?
-
-❓What is the impact of negative life events on financial risk taking?
-
-I have taught and assisted in teaching a range of undergraduate and graduate courses as both an instructor and a teaching assistant. I am passionate about fostering an active, dynamic, and inclusive learning environment where students can connect theory with real-world challenges.
-
-      </p>
+        <p>
+            I have taught and assisted in teaching a range of undergraduate and graduate courses as both an instructor and a teaching assistant. I am passionate about fostering an active, dynamic, and inclusive learning environment where students can connect theory with real-world challenges.
+        </p>
     </section>
 
     <!-- ABOUT -->
