--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@ index.html
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f5f5;
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    line-height: 1.6;
+    font-size: 16px;
+    color: #24292e;   /* GitHub text color */
+    background: #ffffff;
+    margin: 40px auto;
+    max-width: 800px;
+    padding: 20px;
     }
 
     header {
