--- a/index.html
+++ b/index.html
@@ -263,12 +263,12 @@ index.html
         questions drive my research:
       </p>
 
-      <ul>
+      <ul class="question-list">
           list-style-type: none;  
           padding-left: 0; 
-        <li><span class="q-emoji">❓</span>What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</li>
-        <li><span class="q-emoji">❓</span>What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
-        <li><span class="q-emoji">❓</span>What is the impact of negative life events on financial risk taking?</li>
+        <li>❓</span>What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</li>
+        <li>❓</span>What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
+        <li>❓</span>What is the impact of negative life events on financial risk taking?</li>
       </ul>
 
       <p>
