--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ index.html
       </p>
 
       <ul class="question-list">
-        <li>❓</span>What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</li>
-        <li>❓</span>What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
-        <li>❓</span>What is the impact of negative life events on financial risk taking?</li>
+        <li>❓What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</li>
+        <li>❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
+        <li>❓What is the impact of negative life events on financial risk taking?</li>
       </ul>
 
       <p>
