--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ index.html
         questions drive my research:
       </p>
 
-      <ul class="question-list">
+      <ul class="question-list" style="list-style:none; padding-left:0;">
         <li>❓What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</li>
         <li>❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
         <li>❓What is the impact of negative life events on financial risk taking?</li>
