--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ index.html
       </p>
 
       <ul class="question-list" style="list-style:none; padding-left:0;">
-        <li>❓What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</li>
-        <li>❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</li>
-        <li>❓What is the impact of negative life events on financial risk taking?</li>
+        ❓What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?
+        ❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?
+        ❓What is the impact of negative life events on financial risk taking?
       </ul>
 
       <p>
