--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ index.html
     <section class="hero" id="about">
       <div class="profile-photo">
         <!-- Upload an image called profile.jpg to the repo -->
-        <img src="profile.jpg" alt="Photo of Urjaswi Mukherjee">
+        <img src="Lavender5.png" alt="Photo of Urjaswi Mukherjee">
       </div>
 
       <div class="hero-main">
