--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ index.html
   <main class="page">
     <!-- Hero section with photo and contact info -->
     <section class="hero" id="about">
-      <div class="profile-photo">
+      <div class="profile-container">
         <!-- Upload an image called profile.jpg to the repo -->
-        <img src="Lavender5.png" alt="Photo of Urjaswi Mukherjee">
+        <img src="Lavender5.png" alt="Photo of Urjaswi Mukherjee" class="profile-photo">
       </div>
 
       <div class="hero-main">
