--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ index.html
       </p>
 
       <ul class="question-list" style="list-style:none; padding-left:0;">
-        ❓What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?<br>
-        ❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?<br>
-        ❓What is the impact of negative life events on financial risk taking?
+        <p>❓What are the effects of extended Medicaid postpartum coverage on insurance and mental health outcomes?</p>
+        <p>❓What are the effects of debt relief programs on the mental health of farmers? Do minority farmers benefit more than white farmers?</p>
+        <p>❓What is the impact of negative life events on financial risk taking?</p>
       </ul>
 
       <p>
