--- a/index.html
+++ b/index.html
@@ -223,24 +223,10 @@ index.html
         </div>
       </div>
 
-      <div class="hero-contact">
-        <a href="mailto:youremail@unr.edu">
-          <span class="icon">✉</span>
-          <span>youremail@unr.edu</span>
-        </a>
-        <a href="https://urjaswim.github.io" target="_blank">
-          <span class="icon">🌐</span>
-          <span>Personal website</span>
-        </a>
-        <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">
-          <span class="icon">ⓞ</span>
-          <span>ORCID</span>
-        </a>
-        <a href="https://www.linkedin.com/" target="_blank">
-          <span class="icon">in</span>
-          <span>LinkedIn</span>
-        </a>
-      </div>
+<div class="icon-column">
+  <a href="mailto:umukherjee@unr.edu"><i class="fa-solid fa-envelope"></i></a>
+  <a href="https://www.linkedin.com/in/urjaswi-mukherjee-264b31a2/"><i class="fa-brands fa-linkedin"></i></a>
+</div>
     </section>
 
     <!-- Self Introduction -->
