--- a/index.html
+++ b/index.html
@@ -223,8 +223,12 @@ index.html
         </div>
         </div>
         <div class="hero-column">
-          <a href="mailto:umukherjee@unr.edu"><i class="fa-solid fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/urjaswi-mukherjee-264b31a2/"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="mailto:umukherjee@unr.edu">
+            <i class="fa-solid fa-envelope"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/urjaswi-mukherjee-264b31a2/">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
         </div>
       
     </section>
