--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ index.html
         </div>
        
         <div class="hero-column">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
           <a href="mailto:umukherjee@unr.edu">
             <i class="fa-solid fa-envelope"></i>
           </a>
