--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ index.html
 
     <!-- Self Introduction -->
     <section>
-      <h2>Self Introduction</h2>
+      <p>Self Introduction</p>
 
       <p>
         I am a fifth-year Ph.D. candidate in the Department of Economics at the
