--- a/index.html
+++ b/index.html
@@ -270,17 +270,17 @@ index.html
 
     <!-- Placeholder sections so the nav links work -->
     <section id="research">
-      <h2>Research</h2>
+      <p>Research</p>
       <p>[Add your research projects, working papers, and publications here.]</p>
     </section>
 
     <section id="teaching">
-      <h2>Teaching</h2>
+      <p>Teaching</p>
       <p>[Add your teaching statement, courses taught, and sample syllabi here.]</p>
     </section>
 
     <section id="cv">
-      <h2>Curriculum Vitae</h2>
+      <p>Curriculum Vitae</p>
       <p>You can download my CV here:</p>
       <p><a href="cv.pdf" target="_blank"><strong>Download CV (PDF)</strong></a></p>
       <!-- Upload a file named cv.pdf to the repo for this link to work -->
