--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@ index.html
     <!-- Self Introduction -->
     <section>
       <h2>Self Introduction</h2>
-
+      <span style="font-size: 30px;">
+        <strong>Self Introduction</strong></span>
       <p>
         I am a fifth-year Ph.D. candidate in the Department of Economics at the
         University of Nevada, Reno (UNR), <strong>currently on the job market for the
