--- a/index.html
+++ b/index.html
@@ -270,17 +270,20 @@ index.html
 
     <!-- Placeholder sections so the nav links work -->
     <section id="research">
-      <h2>Research</h2>
+      <span style="font-size: 24px;">
+        <strong>Research</strong></span>
       <p>[Add your research projects, working papers, and publications here.]</p>
     </section>
 
     <section id="teaching">
-      <h2>Teaching</h2>
+      <span style="font-size: 24px;">
+        <strong>Teaching</strong></span>
       <p>[Add your teaching statement, courses taught, and sample syllabi here.]</p>
     </section>
 
     <section id="cv">
-      <h2>Curriculum Vitae</h2>
+      <span style="font-size: 24px;">
+      <strong>Curriculum Vitae</strong></span>
       <p>You can download my CV here:</p>
       <p><a href="cv.pdf" target="_blank"><strong>Download CV (PDF)</strong></a></p>
       <!-- Upload a file named cv.pdf to the repo for this link to work -->
