--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="name">Urjaswi Mukherjee</div>
     <nav class="nav-links">
       <a href="#about">About</a>
-      <a href="#research">Research</a>
+      <a href="#Research.html">Research</a>
       <a href="#teaching">Teaching</a>
       <a href="#cv">CV</a>
     </nav>
