--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
     <nav class="nav-links">
       <a href="#about">About</a>
       <a href="Research.html">Research</a>
-      <a href="#teaching">Teaching</a>
-      <a href="#cv">CV</a>
+      <a href="Teaching.html">Teaching</a>
+      <a href="CV.html">CV</a>
     </nav>
   </header>
 
