--- a/Research.html
+++ b/Research.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: "Georgia", "Times New Roman", serif;
-      background: #f4f4f7;
+      background: lavender;
       margin: 40px;
       line-height: 1.6;
       color: #333;
