--- a/Research.html
+++ b/Research.html
@@ -1,30 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Research</title>
-    <style>
-        body {
-            font-family: "Georgia", "Times New Roman", serif;
-      background: lavender;
-      margin: 40px;
-      line-height: 1.6;
-      color: #333;
+<meta charset="UTF-8">
+<title>Research</title>
+
+<style>
+    body {
+        font-family: Georgia, "Times New Roman", serif;
+        background: lavender;
+        margin: 0;
+        padding: 0;
+        color: #222;
     }
+
+    /* NAVIGATION BAR */
+    .navbar {
+        background: white;
+        padding: 20px 60px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .navbar .name {
+        font-size: 20px;
+        font-weight: bold;
+        margin-right: 50px;
+    }
+
+    .navbar a {
+        margin-right: 25px;
+        text-decoration: none;
+        color: #333;
+        font-size: 16px;
+    }
+
+    .navbar a:hover {
+        color: #0072c6;
+    }
+
+    .navbar a.active {
+        color: #0072c6;
+        font-weight: bold;
+    }
+
+    /* PAGE CONTENT */
+    .content {
+        padding: 50px 60px;
+    }
+
     h1 {
-      font-size: 2.4rem;
-      margin-bottom: 1rem;
+        font-size: 42px;
+        margin-bottom: 30px;
+        font-weight: bold;
     }
+
     h2 {
-      font-size: 1.5rem;
-      margin-top: 2rem;
-      margin-bottom: 0.5rem;
+        font-size: 26px;
+        margin-top: 40px;
+        margin-bottom: 10px;
+        font-weight: bold;
     }
+
     ol {
-      padding-left: 1.5rem;
+        margin-left: 20px;
     }
-  </style>
+
+    li {
+        margin-bottom: 20px;
+    }
+
+    a {
+        color: #0066cc;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    em {
+        font-style: italic;
+    }
+</style>
 </head>
+
 <body>
 
   <h1>Research</h1>
