--- a/Research.html
+++ b/Research.html
@@ -46,16 +46,17 @@
 <h3>1. <strong>Job Market Paper</strong>: The Effects of Extended Medicaid Postpartum Coverage on Insurance and Mental Health Outcomes.</h3>
 <i>With Sankar Mukhopadhyay</i>
 
-<h3>Abstract</h3>
-
-<table>
+<table width="100%">
 <tr>
-<td width="60%">
+<td width="60%" style="vertical-align: top; padding-right: 20px;">
+ <h3>Abstract</h3>
+<p>    
 Despite the United States' high healthcare expenditure, maternal outcomes remain significantly worse compared to other developed nations. The American Rescue Plan Act (ARPA) of 2021 aimed to address this issue by allowing states to extend Medicaid postpartum coverage from 60 days to 12 months. In an era dominated by sharp differences and party ideology, most red and blue states moved quickly to adopt this extension. This paper evaluates the effects of this policy change using high-frequency data from the Household Pulse Survey and a staggered Difference-in-Differences (DiD) framework. Our findings indicate that the postpartum coverage expansion significantly increased Medicaid enrollment and reduced uninsurance rates among women of childbearing age. Additionally, the policy led to notable reductions in moderate to severe anxiety and depression, highlighting its positive impact on maternal mental health. The results underscore the importance of continuous health insurance coverage in improving maternal mental health.
+</p>
 </td>
 
-<td width="40%" align="center">
-    <img src="Paper_1.png" width="100%">
+<td width="40%" style="vertical-align: top; text-align: center;">
+  <img src="Paper_1.png" width="100%" style="border-radius: 10px;">
 </td>
 </tr>
 </table>
