--- a/Research.html
+++ b/Research.html
@@ -79,18 +79,17 @@ We use the quasi-exogenous variation from the farm debt relief programs establis
 <h3>3. Impact of Negative Life Events on Financial Risk Taking.</h3>
 <i>With Federico Guerrero</i>
 
-<h3>Abstract</h3>
-
-<table>
+<table width="100%">
 <tr>
-<td width="60%">
+<td width="60%" style="vertical-align: top; padding-right: 20px;">
+ <h3>Abstract</h3>
+<p>
 This paper investigates whether traumatic life events—specifically, the loss of a child—shape individuals’ willingness to engage in financial risk-taking. Using data from the 2004–2016 waves of the US Health and Retirement Study (HRS), we proxy risk preferences through observed portfolio decisions, focusing primarily on stock market participation as an indicator of financial risk-taking behavior. Our analysis reveals that individuals who have experienced the death of a child are less likely to invest in risky assets, suggesting the presence of a negative association between bereavement and financial risk-taking. However, while the evidence points to a potential correlation, the relationship is not statistically definitive. These findings contribute to the broader literature on how deeply personal and emotionally significant life shocks can influence economic decision-making, highlighting the possibility that traumatic experiences may have persistent effects even in domains unrelated to the original event.
+</p>
 </td>
 
-<td width="40%" align="center">
-    <img src="neglif.png" width="100%">
-    <br>
-    <sub><em>Proportion of stock holders conditional on the number of life events</em></sub>
+<td width="40%" style="vertical-align: top; text-align: center;">
+  <img src="neglif.png" width="100%" style="border-radius: 10px;">
 </td>
 </tr>
 </table>
