--- a/Research.html
+++ b/Research.html
@@ -90,6 +90,8 @@ This paper investigates whether traumatic life events—specifically, the loss o
 
 <td width="40%" style="vertical-align: top; text-align: center;">
   <img src="neglif.png" width="90%" style="border-radius: 10px;">
+   <br>
+    <sub><em>Proportion of stock holders conditional on the number of life events</em></sub> 
 </td>
 </tr>
 </table>
