--- a/Teaching.html
+++ b/Teaching.html
@@ -1,1 +1,153 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Teaching | Urjaswi Mukherjee</title>
 
+<style>
+    body {
+        font-family: Georgia, "Times New Roman", serif;
+        background: #f2f3f7;
+        margin: 0;
+        padding: 0;
+        color: #222;
+        line-height: 1.6;
+    }
+
+    .navbar {
+        background: white;
+        padding: 20px 60px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .navbar .name {
+        font-size: 20px;
+        font-weight: bold;
+        margin-right: 50px;
+    }
+
+    .navbar a {
+        margin-right: 25px;
+        text-decoration: none;
+        color: #333;
+        font-size: 16px;
+    }
+    .navbar a:hover {
+        color: #0072c6;
+    }
+    .navbar a.active {
+        color: #0072c6;
+        font-weight: bold;
+    }
+
+    .content {
+        padding: 50px 60px;
+    }
+
+    h1 {
+        font-size: 42px;
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        margin-top: 35px;
+        margin-bottom: 10px;
+        font-size: 26px;
+        font-weight: bold;
+    }
+
+    .section-title {
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 25px;
+    }
+
+    .feedback-box {
+        background: white;
+        padding: 20px 25px;
+        margin-top: 20px;
+        border-radius: 12px;
+        box-shadow: 0 0 6px rgba(0,0,0,0.1);
+    }
+
+    .quote {
+        margin-bottom: 18px;
+        padding-left: 10px;
+        border-left: 3px solid #0072c6;
+        font-style: italic;
+    }
+</style>
+</head>
+
+<body>
+
+<!-- ⭐ NAVBAR -->
+<div class="navbar">
+    <div class="name">Urjaswi Mukherjee</div>
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="teaching.html" class="active">Teaching</a>
+    <a href="cv.html">CV</a>
+</div>
+
+<!-- ⭐ MAIN CONTENT -->
+<div class="content">
+
+<h1>Teaching</h1>
+
+<h2>University of Nevada, Reno (2021–Present)</h2>
+
+<div class="section-title">Instructor</div>
+<ul>
+    <li><strong>ECON 262 Principles of Statistics II</strong> — Spring 2025, Fall 2024, Spring 2024, Fall 2023</li>
+    <li><strong>ECON 261 Principles of Statistics I</strong> — Fall 2025, Summer 2025</li>
+    <li>Contribution in <strong>ECON 741 Applied Econometrics</strong> — Fall 2025</li>
+</ul>
+
+<div class="section-title">Teaching Assistant</div>
+<ul>
+    <li><strong>ECON 741 Applied Econometrics</strong> — Fall 2025</li>
+    <li><strong>ECON 702 Advanced Microeconomics</strong> — Fall 2025</li>
+    <li><strong>ECON 420 Economics of Health Care and Health Policy</strong> — Spring 2025, Fall 2021</li>
+    <li><strong>ECON 365 Labor Economics</strong> — Fall 2025</li>
+    <li><strong>ECON 303 Intermediate Macroeconomics</strong> — Spring 2022, Fall 2023</li>
+    <li><strong>ECON 304 Money and Banking</strong> — Spring 2023</li>
+    <li><strong>ECON 103 Principles of Macroeconomics</strong> — Fall 2021</li>
+</ul>
+
+<h2>🎓 Student Feedback Highlights</h2>
+
+<div class="feedback-box">
+
+    <div class="quote">"Professor Mukherjee did an exceptional job in providing lectures and other resources to help us succeed. I did one of the best jobs in an economics class because of her specifically."</div>
+
+    <div class="quote">"Instructor is very knowledgeable in the material, stuck to the syllabus, and good on implying examples to the material being taught."</div>
+
+    <div class="quote">"The course would normally be a more difficult course regarding mathematics and utilizing formulas... With Professor Mukherjee, she only had strengths for this course that allowed us to succeed."</div>
+
+    <div class="quote">"The professor did well with teaching and assigning an adequate amount of homework."</div>
+
+    <div class="quote">"Instructor would talk about subject and give examples which was nice. Especially for weird formulas and their use."</div>
+
+    <div class="quote">"Great teacher and a fun class."</div>
+
+    <div class="quote">"The course itself was engaging and taught me a lot about economics."</div>
+
+    <div class="quote">"Instructor had great knowledge and ways of teaching the class. Great structure throughout the semester."</div>
+
+    <div class="quote">"I think she is a great teacher. She’s smart, very knowledgeable, understanding, and willing to work with you."</div>
+
+    <div class="quote">"I appreciated having concepts broken down slowly. Everything was explained well and she would take time to draw out concepts for us so we could understand more in depth."</div>
+
+    <div class="quote">"I love how Professor Mukherjee was very straight to the point and wouldn’t confuse the class."</div>
+
+    <div class="quote">"She did amazing. I really enjoyed her class and would take her again."</div>
+
+</div>
+
+</div>
+
+</body>
+</html>
