--- a/Research.html
+++ b/Research.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Research</title>
+    <title>Research | Urjaswi Mukherjee</title>
     <style>
         body {
             font-family: "Georgia", "Times New Roman", serif;
