--- a/Research.html
+++ b/Research.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Research | Urjaswi Mukherjee</title>
+<meta charset="UTF-8">
+<title>Research | Urjaswi Mukherjee</title>
+    
     <style>
-        body {
-            font-family: "Georgia", "Times New Roman", serif;
+      body {
+      font-family: "Georgia", "Times New Roman", serif;
       background: lavender;
       margin: 40px;
       line-height: 1.6;
       color: #333;
     }
+        .navbar {
+            background: white
+            padding: 20px 60px;
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .navbar .name {
+            font-size: 20px;
+            font-weight: bold;
+            margin-right: 50px;
+        }
+        
     h1 {
       font-size: 2.4rem;
       margin-bottom: 1rem;
