--- a/Research.html
+++ b/Research.html
@@ -41,7 +41,14 @@
   </style>
 </head>
 <body>
-
+<!-- ⭐ NAVBAR -->
+<div class="navbar">
+    <div class="name">Urjaswi Mukherjee</div>
+    <a href="index.html">Home</a>
+    <a href="research.html">class="active">Research</a>
+    <a href="teaching.html">Teaching</a>                   
+    <a href="cv.html">CV</a>
+</div>
 
 <h1>Research</h1>
 
