--- a/Research.html
+++ b/Research.html
@@ -41,6 +41,7 @@
   </style>
 </head>
 <body>
+    
 <!-- ⭐ NAVBAR -->
 <div class="navbar">
     <div class="name">Urjaswi Mukherjee</div>
@@ -50,6 +51,9 @@
     <a href="cv.html">CV</a>
 </div>
 
+<!-- ⭐ MAIN CONTENT -->
+<div class="content">
+    
 <h1>Research</h1>
 
 <h2>Publications</h2>
