--- a/Teaching.html
+++ b/Teaching.html
@@ -127,7 +127,7 @@
 
     <div class="quote">"The course would normally be a more difficult course regarding mathematics and utilizing formulas... With Professor Mukherjee, she only had strengths for this course that allowed us to succeed."</div>
 
-    <div class="quote">"The professor did well with teaching and assigning an adequate amount of homework."</div>
+    <div class="quote">"I really enjoyed her class and would take her again."</div>
 
     <div class="quote">"Instructor would talk about subject and give examples which was nice. Especially for weird formulas and their use."</div>
 
@@ -143,7 +143,7 @@
 
     <div class="quote">"I love how Professor Mukherjee was very straight to the point and wouldn’t confuse the class."</div>
 
-    <div class="quote">"She did amazing. I really enjoyed her class and would take her again."</div>
+    <div class="quote">"The professor did well with teaching and assigning an adequate amount of homework.She did amazing."</div>
 
 </div>
 
