--- a/Research.html
+++ b/Research.html
@@ -46,7 +46,7 @@
 <div class="navbar">
     <div class="name">Urjaswi Mukherjee</div>
     <a href="index.html">Home</a>
-    <a href="research.html">class="active">Research</a>
+    <a href="research.html" class="active">Research</a>
     <a href="teaching.html">Teaching</a>                   
     <a href="cv.html">CV</a>
 </div>
