--- a/Research.html
+++ b/Research.html
@@ -8,8 +8,8 @@
 <div class="navbar">
     <div class="name">Urjaswi Mukherjee</div>
     <a href="index.html">Home</a>
-    <a href="research.html" class="active">Research</a>
-    <a href="teaching.html">Teaching</a>                   
+    <a href="Research.html" class="active">Research</a>
+    <a href="Teaching.html">Teaching</a>                   
     <a href="cv.html">CV</a>
 </div>
     
